@@ -2093,7 +2093,8 @@ class TextInput(PrimitiveInput):
                      looses focus.
        :keyword placeholder: If given a string, placeholder is displayed in the TextInput if the TextInput
                      is empty in order to provide a hint to the user of what may be entered into the TextInput.
-                     If given True instead of a string, the label of the TextInput is used.
+                     If given True instead of a string, the placeholder_source (default is label of the TextInput) value is used.
+       :keyword placeholder_source: If placeholder is True, the strings 'label' or 'field default' is used to determine which text to use  for the placeholder.
        :keyword refresh_widget: (See :class:`~reahl.web.ui.PrimitiveInput`)
        :keyword ignore_concurrent_change: (See :class:`~reahl.web.ui.PrimitiveInput`)
 
@@ -2106,12 +2107,20 @@ class TextInput(PrimitiveInput):
        .. versionchanged:: 5.0
           Added `ignore_concurrent_change`
 
+       .. versionchanged:: 6.2
+          Added `placeholder_source`
+
     """
-    def __init__(self, form, bound_field, fuzzy=False, placeholder=False, refresh_widget=None, ignore_concurrent_change=False):
+    def __init__(self, form, bound_field, fuzzy=False, placeholder=False, placeholder_source='label', refresh_widget=None, ignore_concurrent_change=False):
         super().__init__(form, bound_field, refresh_widget=refresh_widget, ignore_concurrent_change=ignore_concurrent_change)
         self.append_class('reahl-textinput')
         if placeholder:
-            placeholder_text = self.label if placeholder is True else placeholder
+            placeholder_text = placeholder
+            if placeholder is True:
+                placeholder_sources = {'label': self.label, 'field default': self.bound_field.default}
+                if placeholder_source not in placeholder_sources:
+                    raise ProgrammerError('Placeholder source %s is not valid. Valid values are: %s' % (placeholder_source, ','.join(placeholder_sources.keys())))
+                placeholder_text = placeholder_sources[placeholder_source]
             self.set_attribute('placeholder', placeholder_text)
             self.set_attribute('aria-label', placeholder_text)
 
